revert: test workflow

--- a/docker-compose.override.dev.yml
+++ b/docker-compose.override.dev.yml
@@ -36,7 +36,8 @@ services:
       - VERSION=5.0.0-develop
 
 
-
+  workflow:
+    image: gitlab.libriciel.fr:4567/libriciel/pole-signature/i-parapheur-v5/i-parapheur/workflow:develop
 
 
   libersign:
