fix: when des nightlty

--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -235,8 +235,10 @@ dev-deploy:
   rules:
     - if: $NIGHTLY == "NIGHTLY"
       when: always
-  when: manual
+    - if: $NIGHTLY != "NIGHTLY"
+      when: manual
   variables: *dev-config
+  when: manual
   environment:
     name: Dev
     url: https://${DEV_TARGET_SERVER_URL}
