fix: when des nightly

--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -235,6 +235,7 @@ dev-deploy:
   rules:
     - if: $NIGHTLY == "NIGHTLY"
       when: always
+    - if: $NIGHTLY != "NIGHTLY"
   variables: *dev-config
   when: manual
   environment:
