--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -235,6 +235,7 @@ dev-deploy:
   rules:
     - if: $NIGHTLY == "NIGHTLY"
       when: always
+    - if: $CI_MERGE_REQUEST_SOURCE_BRANCH_NAME
   variables: *dev-config
   when: manual
   environment:
